--- a/index.html
+++ b/index.html
@@ -4,163 +4,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Fun X – فيديوهات اليوم</title>
-<style>
-body {
-    margin: 0;
-    padding: 0;
-    font-family: "Georgia", serif;
-    color: #fff;
-    overflow-x: hidden;
-    transition: background 2s;
-}
-
-/* ⭐ النجوم */
-.stars { position: fixed; width: 100%; height: 100%; z-index: -3; }
-.star {
-    position: absolute;
-    border-radius: 50%;
-    background: #fff;
-    animation: twinkle 6s linear infinite;
-    opacity: 0;
-}
-@keyframes twinkle { 0%,100% { opacity: 0.2; } 50% { opacity: 1; } }
-
-/* 🌙 / ☀️ القمر والشمس */
-.celestial {
-    position: fixed;
-    width: 100px; height: 100px;
-    border-radius: 50%;
-    box-shadow: 0 0 30px #fff;
-    z-index: -2;
-    transition: all 1s linear;
-}
-
-/* ☁️ الغيوم تتحرك */
-.cloud { position: fixed; top:20%; width:300px; height:80px; background: rgba(255,255,255,0.05); border-radius:50%; animation: cloudMove 120s linear infinite; z-index:-1; }
-.cloud:nth-child(2) { top:50%; width:500px; height:100px; animation-duration:200s; }
-@keyframes cloudMove { 0% { left:-500px; } 100% { left:100%; } }
-
-/* 🟥 الهيدر */
-header {
-    background: rgba(0,0,0,0.85);
-    color: #fc0000;
-    padding: 15px;
-    text-align: center;
-    font-size: 26px;
-    font-weight: bold;
-    letter-spacing: 2px;
-    box-shadow: 0 0 10px #000;
-    text-shadow: 0 0 5px #fc0000;
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-}
-header a { color:#fc0000; text-decoration:none; transition:0.3s; }
-header a:hover { color:#f83a00; text-shadow:0 0 20px #f83a00,0 0 30px #ff4500; transform:scale(1.05); }
-
-/* البحث مخفي */
-.search { display: none; }
-
-/* 🟧 جدول الروابط */
-table {
-    background: rgba(0,0,0,0.75);
-    font-size: 20px;
-    border-collapse: collapse;
-    margin: 20px auto;
-    border-radius: 12px;
-    overflow: hidden;
-    box-shadow: 0 0 15px #000;
-    width: 95%;
-}
-table th { padding: 15px 20px; border: 1px solid #333; border-radius:6px; transition:0.3s; }
-table th a { color: #f83a00; text-decoration: none; font-weight: bold; transition: transform 0.3s,color 0.3s,text-shadow 0.3s; }
-table th a:hover { transform: scale(1.2); color: #00eaff; text-shadow: 0 0 15px #00eaff, 0 0 25px #00ffff; }
-
-/* 🎬 الفيديوهات */
-section {
-    margin: 20px;
-    padding: 20px;
-    background: rgba(0,0,0,0.85);
-    border-radius: 12px;
-    box-shadow: 0 0 25px #111;
-    text-align: center;
-    position: relative;
-    overflow: hidden;
-}
-section h2 {
-    color: #f83a00;
-    margin-bottom: 20px;
-    font-family: "Georgia", serif;
-    animation: glow 1.5s infinite alternate;
-    text-transform: uppercase;
-    cursor: default;
-}
-@keyframes glow {
-    0% { text-shadow: 0 0 5px #f83a00; }
-    50% { text-shadow:0 0 15px #f83a00,0 0 20px #ff4500; }
-    100% { text-shadow:0 0 25px #f83a00,0 0 30px #ff8000; }
-}
-video {
-    width:100%;
-    border-radius:10px;
-    border:2px solid #f83a00;
-    box-shadow:0 0 25px #ff4500,0 0 50px #f83a00 inset;
-    max-width:100%;
-    transition: transform 0.3s, box-shadow 0.3s;
-    position: relative; z-index:1;
-}
-video::after {
-    content:'';
-    position:absolute; top:0; left:0;
-    width:100%; height:100%;
-    border-radius:10px;
-    background: linear-gradient(120deg, rgba(0,255,255,0.15), rgba(255,0,255,0.15));
-    mix-blend-mode: overlay;
-    pointer-events: none;
-    animation: holo 3s linear infinite;
-    z-index:2;
-}
-@keyframes holo {
-    0% { transform: translateX(0) translateY(0); }
-    50% { transform: translateX(5px) translateY(-5px); }
-    100% { transform: translateX(0) translateY(0); }
-}
-
-/* التعليقات */
-.comment-box { margin-top: 20px; text-align:center; }
-.comment-box input, .comment-box button { padding: 10px; margin: 5px; border-radius:6px; border:none; }
-.comment-box input { width:60%; }
-.comment-box button { background:#f83a00; color:#fff; cursor:pointer; transition:0.3s; }
-.comment-box button:hover { background:#00eaff; color:#000; }
-.comments-list {
-    margin-top:15px; max-height:200px; overflow-y:auto;
-    background: rgba(255,255,255,0.05); padding:10px; border-radius:8px;
-}
-
-/* إشعار */
-#notify { position:fixed; bottom:20px; right:20px; background:#f83a00; color:#fff; padding:12px 20px; border-radius:10px; box-shadow:0 0 20px #000; display:none; font-weight:bold; z-index:1000; cursor:pointer; }
-
-/* الهواتف */
-@media(max-width:768px){
-    header{font-size:22px;}
-    table th{padding:12px 5px;font-size:14px;}
-    section h2{font-size:20px;}
-    video{max-width:100%;height:auto;}
-    .comment-box input{width:55%;}
-}
-
-/* حقوق الموقع */
-footer{
-    text-align:center;
-    padding:15px;
-    margin-top:20px;
-    font-size:14px;
-    color:#f83a00;
-}
-</style>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+<!-- ⭐ نجوم وخلفية -->
 <div class="stars"></div>
 <div class="celestial" id="celestial"></div>
 <div class="cloud"></div>
@@ -168,6 +16,7 @@ footer{
 
 <header>
     <a href="#">Fun X</a>    
+    <button id="logoutBtn" style="float:right; background:#f83a00; border:none; padding:8px 15px; border-radius:6px; cursor:pointer; color:#fff;">🚪 خروج</button>
 </header>
 
 <table>
@@ -200,74 +49,39 @@ footer{
 
 <footer>جميع الحقوق محفوظة لسنة 2025 © Fun X 🎉</footer>
 
-<script>
-// 🌟 النجوم
-for(let i=0;i<100;i++){
-    const star=document.createElement('div');
-    star.className='star';
-    star.style.top=Math.random()*100+'%';
-    star.style.left=Math.random()*100+'%';
-    star.style.width=star.style.height=Math.random()*2+1+'px';
-    document.body.appendChild(star);
-}
+<script type="module">
+// 📌 Firebase Config
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
 
-// الحركة الذكية للقمر/الشمس حسب الوقت
-const celestial = document.getElementById('celestial');
-function updateCelestial(){
-    const now = new Date();
-    const hour = now.getHours() + now.getMinutes()/60;
-    const percent = hour/24;
-    celestial.style.top = `${10 + percent*60}%`;
-    celestial.style.left = `${10 + percent*80}%`;
-    if(hour>=6 && hour<18){
-        document.body.style.background = "linear-gradient(180deg,#87CEEB,#FFD700)";
-        celestial.style.background = "radial-gradient(circle,#FFD700,#FFA500)";
-        celestial.style.boxShadow="0 0 50px #FFD700";
-        document.querySelectorAll('.star').forEach(s=>s.style.opacity=0);
-    } else {
-        document.body.style.background = "#000";
-        celestial.style.background = "radial-gradient(circle,#fff,#ccc)";
-        celestial.style.boxShadow="0 0 30px #fff";
-        document.querySelectorAll('.star').forEach(s=>s.style.opacity=Math.random());
-    }
-}
-setInterval(updateCelestial,1000);
-updateCelestial();
+const firebaseConfig = {
+  apiKey: "AIzaSyBwET1o7kvQ9bmaJeYYFrPQiztMMWnzvk8",
+  authDomain: "funx-site.firebaseapp.com",
+  projectId: "funx-site",
+  storageBucket: "funx-site.firebasestorage.app",
+  messagingSenderId: "760681309946",
+  appId: "1:760681309946:web:409b4e70c4e257672b0b43",
+  measurementId: "G-68NP5TBNQT"
+};
 
-// حفظ حالة الفيديو
-const video=document.getElementById('mainVideo');
-window.addEventListener('beforeunload',()=>localStorage.setItem('videoTime',video.currentTime));
-window.addEventListener('load',()=>{
-    const lastTime=localStorage.getItem('videoTime');
-    if(lastTime) video.currentTime=lastTime;
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+
+// ✅ التحقق من تسجيل الدخول
+onAuthStateChanged(auth, (user) => {
+  if (!user) {
+    window.location.href = "login.html"; // لو مش مسجل يروح للوجين
+  }
 });
 
-// التعليقات
-function addComment(){
-    const input=document.getElementById('commentInput');
-    if(input.value.trim()==="") return;
-    const list=document.getElementById('commentsList');
-    const div=document.createElement('div');
-    div.innerText=input.value;
-    list.appendChild(div);
-    input.value="";
-}
-
-// =======================================
-// إشعارات التحديثات (فقط عند وجود تحديث جديد)
-const NEW_UPDATE_AVAILABLE = true; // غيّر لـ false إذا لا يوجد تحديث
-const updateMessage = "🎉 تم إصدار تحديث جديد للعبة Game War – إصدار 1.1! اضغط هنا لمزيد من التفاصيل.";
-const notifyElement = document.getElementById('notify');
-const updateKey = 'updateSeen';
-
-if(NEW_UPDATE_AVAILABLE && localStorage.getItem(updateKey) !== 'true'){
-    notifyElement.innerText = updateMessage;
-    notifyElement.style.display='block';
-    notifyElement.onclick = () => {
-        window.location.href='notifications.html'; // صفحة التحديثات
-        localStorage.setItem(updateKey,'true'); // علامة أن المستخدم شاهد التحديث
-    };
-}
+// ✅ زر الخروج
+document.getElementById("logoutBtn").addEventListener("click", () => {
+  signOut(auth).then(() => {
+    window.location.href = "login.html";
+  });
+});
 </script>
+
+<script src="script.js"></script>
 </body>
 </html>
