--- a/signup.html
+++ b/signup.html
@@ -1,141 +1,51 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>إنشاء حساب - Fun X</title>
-  <style>
-    body {
-      font-family: 'Cairo', sans-serif;
-      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      color: #fff;
-      overflow: hidden;
-    }
-
-    /* تأثير النجوم (خلفية مستقبلية) */
-    body::before {
-      content: "";
-      position: absolute;
-      width: 2px;
-      height: 2px;
-      background: white;
-      box-shadow: 0 0 3px #00d4ff, 100px 200px white, 200px 400px #00d4ff, 300px 600px white;
-      animation: stars 10s linear infinite;
-    }
-
-    @keyframes stars {
-      from { transform: translateY(0); }
-      to { transform: translateY(-1000px); }
-    }
-
-    .signup-container {
-      background: rgba(20, 20, 35, 0.95);
-      padding: 40px 30px;
-      border-radius: 16px;
-      box-shadow: 0px 8px 30px rgba(0,0,0,0.6);
-      width: 340px;
-      text-align: center;
-      backdrop-filter: blur(10px);
-      z-index: 1;
-    }
-
-    h2 {
-      margin-bottom: 20px;
-      color: #00d4ff;
-      font-size: 26px;
-      letter-spacing: 1px;
-    }
-
-    input {
-      width: 90%;
-      padding: 12px;
-      margin: 10px 0;
-      border: none;
-      border-radius: 10px;
-      outline: none;
-      font-size: 14px;
-      background: #2f2f45;
-      color: #fff;
-      transition: 0.3s;
-    }
-
-    input:focus {
-      background: #3a3a55;
-      box-shadow: 0 0 10px #00d4ff;
-    }
-
-    button {
-      width: 95%;
-      padding: 12px;
-      margin-top: 15px;
-      border: none;
-      border-radius: 10px;
-      background: linear-gradient(90deg, #00d4ff, #0099cc);
-      color: #000;
-      font-weight: bold;
-      font-size: 15px;
-      cursor: pointer;
-      transition: transform 0.2s ease-in-out, background 0.3s;
-    }
-
-    button:hover {
-      transform: scale(1.05);
-      background: linear-gradient(90deg, #00aacc, #007799);
-    }
-
-    .login-link {
-      margin-top: 15px;
-      display: block;
-      color: #aaa;
-    }
-
-    .login-link a {
-      color: #00d4ff;
-      text-decoration: none;
-      transition: 0.3s;
-    }
-
-    .login-link a:hover {
-      color: #00ffff;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>إنشاء حساب - Fun X</title>
+<link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <div class="signup-container">
+<body class="auth-body">
+  <div class="login-container">
     <h2>إنشاء حساب</h2>
     <form id="signupForm">
-      <input type="text" id="username" placeholder="اسم المستخدم" required>
       <input type="email" id="email" placeholder="البريد الإلكتروني" required>
       <input type="password" id="password" placeholder="كلمة المرور" required>
-      <input type="password" id="confirmPassword" placeholder="تأكيد كلمة المرور" required>
-      <button type="submit">إنشاء حساب</button>
+      <button type="submit">تسجيل</button>
     </form>
-    <div class="login-link">
-      لديك حساب بالفعل؟ <a href="login.html">تسجيل الدخول</a>
+    <div class="signup-link">
+      لديك حساب؟ <a href="login.html">تسجيل الدخول</a>
     </div>
   </div>
 
-  <script>
-    document.getElementById("signupForm").addEventListener("submit", function(e){
-      e.preventDefault();
-      const username = document.getElementById("username").value;
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-      const confirmPassword = document.getElementById("confirmPassword").value;
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
 
-      if(password !== confirmPassword){
-        alert("كلمة المرور غير متطابقة!");
-        return;
-      }
+const firebaseConfig = {
+  apiKey: "AIzaSyBwET1o7kvQ9bmaJeYYFrPQiztMMWnzvk8",
+  authDomain: "funx-site.firebaseapp.com",
+  projectId: "funx-site",
+  storageBucket: "funx-site.firebasestorage.app",
+  messagingSenderId: "760681309946",
+  appId: "1:760681309946:web:409b4e70c4e257672b0b43",
+  measurementId: "G-68NP5TBNQT"
+};
 
-      // لسه مش مربوط بـ Firebase
-      alert("تم إنشاء الحساب بنجاح ✅\nاسم المستخدم: " + username + "\nالإيميل: " + email);
-    });
-  </script>
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+
+// ✅ إنشاء حساب
+document.getElementById("signupForm").addEventListener("submit", (e) => {
+  e.preventDefault();
+  const email = document.getElementById("email").value;
+  const password = document.getElementById("password").value;
+
+  createUserWithEmailAndPassword(auth, email, password)
+    .then(() => window.location.href = "index.html")
+    .catch(err => alert("❌ خطأ: " + err.message));
+});
+</script>
 </body>
 </html>
