--- a/signup.html
+++ b/signup.html
@@ -1,43 +1,62 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>إنشاء حساب - Fun X</title>
-  <style>
-    body { font-family: Arial, sans-serif; background:#111; color:#fff; text-align:center; }
-    form { margin-top:100px; background:#222; padding:20px; border-radius:10px; display:inline-block; }
-    input { display:block; margin:10px auto; padding:10px; border-radius:5px; border:none; width:80%; }
-    button { background:#f83a00; color:#fff; padding:10px 20px; border:none; border-radius:5px; cursor:pointer; }
-    button:hover { background:#00eaff; color:#000; }
-    a { color:#f83a00; }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Fun X – تسجيل جديد</title>
+<style>
+body {
+    margin:0;
+    padding:0;
+    font-family:"Georgia", serif;
+    background: #000;
+    color:#fff;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    height:100vh;
+    flex-direction:column;
+}
+h1 { color:#f83a00; margin-bottom:20px; }
+input, button {
+    padding:10px 15px;
+    margin:5px;
+    border-radius:6px;
+    border:none;
+    font-size:16px;
+}
+input { width:250px; }
+button { background:#f83a00; color:#fff; cursor:pointer; transition:0.3s; }
+button:hover { background:#00eaff; color:#000; }
+</style>
 </head>
 <body>
-  <h2>إنشاء حساب جديد</h2>
-  <form id="signupForm">
-    <input type="email" id="email" placeholder="البريد الإلكتروني" required>
-    <input type="password" id="password" placeholder="كلمة المرور" required>
-    <button type="submit">تسجيل</button>
-  </form>
-  <p>عندك حساب؟ <a href="login.html">سجل الدخول</a></p>
+<h1>تسجيل جديد – Fun X</h1>
+<input type="text" id="username" placeholder="اكتب اسمك">
+<input type="password" id="password" placeholder="كلمة المرور">
+<button onclick="signup()">سجل دخول</button>
 
-  <script type="module">
-    import { auth } from "./firebase.js";
-    import { createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
+<script>
+function signup(){
+    const user = document.getElementById('username').value.trim();
+    const pass = document.getElementById('password').value.trim();
+    if(!user || !pass){
+        alert("من فضلك اكمل البيانات");
+        return;
+    }
+    // حفظ بيانات التسجيل مرة واحدة
+    localStorage.setItem("funX_user", user);
+    localStorage.setItem("funX_logged", "true");
+    // تحويل للصفحة الرئيسية
+    window.location.href = "index.html";
+}
 
-    const form = document.getElementById("signupForm");
-    form.addEventListener("submit", (e) => {
-      e.preventDefault();
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-
-      createUserWithEmailAndPassword(auth, email, password)
-        .then(() => {
-          window.location.href = "index.html"; // يدخل على طول
-        })
-        .catch((err) => alert(err.message));
-    });
-  </script>
+// لو المستخدم مسجل قبل كده، نوجهه مباشرة للـ index.html
+window.onload = function(){
+    if(localStorage.getItem("funX_logged") === "true"){
+        window.location.href = "index.html";
+    }
+}
+</script>
 </body>
 </html>
