--- a/signup.html
+++ b/signup.html
@@ -3,59 +3,78 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Fun X – تسجيل جديد</title>
+<title>تسجيل Fun X</title>
 <style>
 body {
     margin:0;
     padding:0;
-    font-family:"Georgia", serif;
-    background: #000;
-    color:#fff;
+    font-family: "Georgia", serif;
+    background: linear-gradient(180deg,#87CEEB,#FFD700);
     display:flex;
     justify-content:center;
     align-items:center;
     height:100vh;
-    flex-direction:column;
+    color:#fff;
 }
-h1 { color:#f83a00; margin-bottom:20px; }
-input, button {
-    padding:10px 15px;
-    margin:5px;
-    border-radius:6px;
+.container {
+    background: rgba(0,0,0,0.85);
+    padding:30px;
+    border-radius:15px;
+    text-align:center;
+    box-shadow:0 0 25px #000;
+}
+.container h2 {
+    margin-bottom:20px;
+    color:#f83a00;
+    text-shadow:0 0 10px #ff4500;
+}
+.container input {
+    width:80%;
+    padding:10px;
+    margin:10px 0;
+    border-radius:8px;
     border:none;
-    font-size:16px;
 }
-input { width:250px; }
-button { background:#f83a00; color:#fff; cursor:pointer; transition:0.3s; }
-button:hover { background:#00eaff; color:#000; }
+.container button {
+    padding:10px 20px;
+    border:none;
+    border-radius:8px;
+    background:#f83a00;
+    color:#fff;
+    font-weight:bold;
+    cursor:pointer;
+    transition:0.3s;
+}
+.container button:hover {
+    background:#00eaff;
+    color:#000;
+}
 </style>
 </head>
 <body>
-<h1>تسجيل جديد – Fun X</h1>
+
+<div class="container">
+<h2>مرحبا بك في Fun X!</h2>
 <input type="text" id="username" placeholder="اكتب اسمك">
-<input type="password" id="password" placeholder="كلمة المرور">
-<button onclick="signup()">سجل دخول</button>
+<br>
+<button onclick="signup()">دخول Fun X</button>
+</div>
 
 <script>
-function signup(){
-    const user = document.getElementById('username').value.trim();
-    const pass = document.getElementById('password').value.trim();
-    if(!user || !pass){
-        alert("من فضلك اكمل البيانات");
-        return;
-    }
-    // حفظ بيانات التسجيل مرة واحدة
-    localStorage.setItem("funX_user", user);
-    localStorage.setItem("funX_logged", "true");
-    // تحويل للصفحة الرئيسية
-    window.location.href = "index.html";
+// إذا المستخدم سجل قبل كده، نرجعه على index مباشرة
+if(localStorage.getItem('signedUp')){
+    window.location.href = 'index.html';
 }
 
-// لو المستخدم مسجل قبل كده، نوجهه مباشرة للـ index.html
-window.onload = function(){
-    if(localStorage.getItem("funX_logged") === "true"){
-        window.location.href = "index.html";
+function signup(){
+    const name = document.getElementById('username').value.trim();
+    if(name === ""){
+        alert("اكتب اسمك قبل المتابعة!");
+        return;
     }
+    localStorage.setItem('username', name);
+    localStorage.setItem('signedUp', 'true');
+    window.location.href = 'index.html';
 }
 </script>
 </body>
